# Autoconf/automake file

#bin_PROGRAMS = test_cs173

# General compiler/linker flags
#AM_CFLAGS = ${CFLAGS}
#AM_LDFLAGS = ${LDFLAGS}

#objects = test.o
#TARGETS = $(bin_PROGRAMS)

#all: $(bin_PROGRAMS)

#install:
#	mkdir -p ${prefix}/tests
#	cp test_cs173 ${prefix}/tests

#test_cs173: $(objects)
#	$(CC) -o $@ $^ $(AM_CFLAGS) -L../src -lcs173 $(AM_LDFLAGS)

#$(objects): %.o: %.c
#	$(CC) -o $@ -c $^ $(AM_CFLAGS) -I../src/ $(AM_CFLAGS)
